--- a/README.mb
+++ b/README.mb
@@ -8,8 +8,12 @@ Ruby version: 2.1.1
 How to run the program:
 In order to run Phone Book you need to run bundle and make sure that you have the Sinatra server running and open in your browser.
 
+
 Known bugs as of 1/16/15:
-Little known fact. Running nitrous.io on an internet connection that cuts out will lead to no bugs in your code whatsoever. This is mainly due to the fact there is no more code. So hopefully this weekend there will be bugs, because there will be code and this assessment will be resubmitted in far more glory than today. 
+Little known fact. Running nitrous.io on an internet connection that cuts out will lead to no bugs in your code whatsoever. This is mainly due to the fact there is no more code. 
+
+So within the last hour or so of class, I have managed to create only bugs which are mostly untested. Hopefully this weekend there will be more code and less bugs this assessment will be resubmitted in far more glory than today. 
+
 
 Heather Anderson.MIT License. Copyright 2015. Created by Heather Anderson. Email: heather@thisisnotanorg.org
 
