Add copyright to README.

--- a/README
+++ b/README
@@ -19,4 +19,7 @@ In your terminal inside this project folder:
 Known bugs as of 2/5/15:
 This section to hopefully be filled out at the end of the day.
 
+MIT License. Copyright 2015. Created by Heather Anderson. 
+Email: heather@thisisnotanorg.org
+
 Note to my future self: You are finishing this today. Trust me. Why would I lie to myself.
