--- a/README
+++ b/README
@@ -17,9 +17,9 @@ In your terminal inside this project folder:
 
 
 Known bugs as of 2/5/15:
-This section to hopefully be filled out at the end of the day.
+None at this time.
 
 MIT License. Copyright 2015. Created by Heather Anderson. 
 Email: heather@thisisnotanorg.org
 
-Note to my future self: You are finishing this today. Trust me. Why would I lie to myself.
+Note to my future self: It may have taken you far more hours than you ever thought possible, but you have finished the basics of The Great Phone Book! Congratulations! You should remember that thing you learned about how the save method might need to get it's own line so that you aren't infinitely adding objects to your array. You spent at least 5 hours today not realizing that. Now go forth and enjoy the evening because tomorrow we are going to clean up Assessment Three.
